# genetifex

./: .gitignore  CMakeLists.txt  event.c  event.h  genetifex.c  genetifex.cpp  genetifex.h  main.c  main.cpp  player.c  player.h  scene.cpp  scene.h  screen.c  screen.h  timer.c  timer.h  view.cpp  view.h  xpm.c  xpm.h
cmake/: FindXCB-Composite.cmake  FindXCB-Image.cmake
sprites/: gerald.xpm
